force-app/main/default/objects/Project_Team__c/Project_Team__c.object-meta.xml
<CustomObject>
    <label>Project Team</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Project Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>