force-app/main/default/objects/Project_Team__c/fields/IsApprover__c.field-meta.xml
<CustomField>
    <fullName>IsApprover__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be used for the deletion of the record</description>
    <label>Is Approver</label>
    <type>Checkbox</type>
</CustomField>