force-app/main/default/objects/Project_Team__c/fields/IsProjectTeam__c.field-meta.xml
<CustomField>
    <fullName>IsProjectTeam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Project Team</label>
    <type>Checkbox</type>
</CustomField>