force-app/main/default/objects/Project_Team__c/fields/isQuotePDFEmail__c.field-meta.xml
<CustomField>
    <fullName>isQuotePDFEmail__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This check box is an identifier for project team member to send Quote PDF as an Email attachment when quote is generated.</description>
    <label>Subscribe for Quote PDF Email</label>
    <type>Checkbox</type>
</CustomField>