force-app/main/default/objects/Project_Team__c/fields/ProjectId_UserId__c.field-meta.xml
<CustomField>
    <fullName>ProjectId_UserId__c</fullName>
    <externalId>true</externalId>
    <label>ProjectId_UserId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>