force-app/main/default/objects/Project_Team__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Showroom Manager</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Managing Director Projects</fullName>
            </value>
            <value>
                <fullName>VP Sales</fullName>
            </value>
            <value>
                <fullName>Chief Sales Officer</fullName>
            </value>
            <value>
                <fullName>Director National Accounts MRO</fullName>
            </value>
            <value>
                <fullName>Regional Project Manager</fullName>
            </value>
            <value>
                <fullName>Project Development Manager</fullName>
            </value>
            <value>
                <fullName>Hospitality Manager</fullName>
            </value>
            <value>
                <fullName>National Project Manager</fullName>
            </value>
            <value>
                <fullName>MRO National Account Manage</fullName>
            </value>
            <value>
                <fullName>Marketing Rep</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>