force-app/main/default/objects/Project_Team__c/validationRules/Cannot_Make_Changes.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Make_Changes</fullName>
    <active>true</active>
    <description>This validation rule will make sure that the user is not able to make changes to the record</description>
    <errorConditionFormula>AND(
	NOT( ISNEW() ),
	OR(ISCHANGED(Role__c),ISCHANGED(User__c)),
	$Profile.Name &lt;&gt; &#39;System Administrator&#39;,
	OR( IsProjectTeam__c, IsApprover__c  )
)</errorConditionFormula>
    <errorMessage>This record is locked and cannot be modified.</errorMessage>
</ValidationRule>